--- a/indx.css
+++ b/indx.css
@@ -13,7 +13,7 @@ h1{
     font-size: 92px;
     color: #FAB201;
     font-weight: 900;
-    -webkit-text-stroke: 5px white; 
+    box-shadow: #267ADD; 
 }
 .flex{
     display: flex;
