--- a/indx.css
+++ b/indx.css
@@ -14,6 +14,7 @@ h1{
     color: #FAB201;
     font-weight: 900;
     box-shadow: #267ADD; 
+    -webkit-text-stroke: 5px white;
 }
 .flex{
     display: flex;
